add id func
