# api/kratosblog/server/v1/article.pb.go
@@ -368,6 +368,100 @@ func (x *ListReply) GetList() []*v1.Article {
 	return nil
 }
 
+type DetailRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Id string `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+}
+
+func (x *DetailRequest) Reset() {
+	*x = DetailRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_kratosblog_server_v1_article_proto_msgTypes[6]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *DetailRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DetailRequest) ProtoMessage() {}
+
+func (x *DetailRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_kratosblog_server_v1_article_proto_msgTypes[6]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DetailRequest.ProtoReflect.Descriptor instead.
+func (*DetailRequest) Descriptor() ([]byte, []int) {
+	return file_api_kratosblog_server_v1_article_proto_rawDescGZIP(), []int{6}
+}
+
+func (x *DetailRequest) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+type DetailReply struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Detail *v1.Article `protobuf:"bytes,1,opt,name=detail,proto3" json:"detail,omitempty"`
+}
+
+func (x *DetailReply) Reset() {
+	*x = DetailReply{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_kratosblog_server_v1_article_proto_msgTypes[7]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *DetailReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DetailReply) ProtoMessage() {}
+
+func (x *DetailReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_kratosblog_server_v1_article_proto_msgTypes[7]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DetailReply.ProtoReflect.Descriptor instead.
+func (*DetailReply) Descriptor() ([]byte, []int) {
+	return file_api_kratosblog_server_v1_article_proto_rawDescGZIP(), []int{7}
+}
+
+func (x *DetailReply) GetDetail() *v1.Article {
+	if x != nil {
+		return x.Detail
+	}
+	return nil
+}
+
 var File_api_kratosblog_server_v1_article_proto protoreflect.FileDescriptor
 
 var file_api_kratosblog_server_v1_article_proto_rawDesc = []byte{
@@ -411,31 +505,45 @@ var file_api_kratosblog_server_v1_article_proto_rawDesc = []byte{
 	0x33, 0x0a, 0x04, 0x6c, 0x69, 0x73, 0x74, 0x18, 0x02, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x1f, 0x2e,
 	0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x64,
 	0x61, 0x74, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x52, 0x04,
-	0x6c, 0x69, 0x73, 0x74, 0x32, 0xfb, 0x02, 0x0a, 0x07, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65,
-	0x12, 0x89, 0x01, 0x0a, 0x0c, 0x43, 0x61, 0x74, 0x65, 0x67, 0x6f, 0x72, 0x79, 0x4c, 0x69, 0x73,
-	0x74, 0x12, 0x2d, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c,
-	0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x61, 0x74,
-	0x65, 0x67, 0x6f, 0x72, 0x79, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x1a, 0x2b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f,
-	0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x61, 0x74, 0x65,
-	0x67, 0x6f, 0x72, 0x79, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1d, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63,
-	0x6c, 0x65, 0x73, 0x2f, 0x63, 0x61, 0x74, 0x65, 0x67, 0x6f, 0x72, 0x79, 0x12, 0x75, 0x0a, 0x07,
-	0x54, 0x61, 0x67, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x28, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72,
-	0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e,
-	0x76, 0x31, 0x2e, 0x54, 0x61, 0x67, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
-	0x74, 0x1a, 0x26, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c,
-	0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x61, 0x67,
-	0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x12, 0x12, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x2f,
-	0x74, 0x61, 0x67, 0x12, 0x6d, 0x0a, 0x04, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x25, 0x2e, 0x61, 0x70,
+	0x6c, 0x69, 0x73, 0x74, 0x22, 0x1f, 0x0a, 0x0d, 0x44, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x02, 0x69, 0x64, 0x22, 0x46, 0x0a, 0x0b, 0x44, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x52,
+	0x65, 0x70, 0x6c, 0x79, 0x12, 0x37, 0x0a, 0x06, 0x64, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x0b, 0x32, 0x1f, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f,
+	0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x64, 0x61, 0x74, 0x61, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x72,
+	0x74, 0x69, 0x63, 0x6c, 0x65, 0x52, 0x06, 0x64, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x32, 0xf2, 0x03,
+	0x0a, 0x07, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x12, 0x89, 0x01, 0x0a, 0x0c, 0x43, 0x61,
+	0x74, 0x65, 0x67, 0x6f, 0x72, 0x79, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x2d, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x61, 0x74, 0x65, 0x67, 0x6f, 0x72, 0x79, 0x4c, 0x69,
+	0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2b, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x61, 0x74, 0x65, 0x67, 0x6f, 0x72, 0x79, 0x4c, 0x69, 0x73,
+	0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15,
+	0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x2f, 0x63, 0x61, 0x74,
+	0x65, 0x67, 0x6f, 0x72, 0x79, 0x12, 0x75, 0x0a, 0x07, 0x54, 0x61, 0x67, 0x4c, 0x69, 0x73, 0x74,
+	0x12, 0x28, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f,
+	0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x61, 0x67, 0x4c,
+	0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x26, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x61, 0x67, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x70,
+	0x6c, 0x79, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x12, 0x10, 0x2f, 0x76, 0x31, 0x2f,
+	0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x2f, 0x74, 0x61, 0x67, 0x12, 0x6d, 0x0a, 0x04,
+	0x4c, 0x69, 0x73, 0x74, 0x12, 0x25, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f,
+	0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e,
+	0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x61, 0x70,
 	0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72,
-	0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65,
-	0x73, 0x74, 0x1a, 0x23, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62,
-	0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69,
-	0x73, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x19, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x13, 0x12,
-	0x11, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x2f, 0x6c, 0x69,
-	0x73, 0x74, 0x42, 0x44, 0x0a, 0x18, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73,
+	0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79,
+	0x22, 0x19, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x13, 0x12, 0x11, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72,
+	0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x12, 0x75, 0x0a, 0x06, 0x44,
+	0x65, 0x74, 0x61, 0x69, 0x6c, 0x12, 0x27, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74,
+	0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31,
+	0x2e, 0x44, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x25,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x74, 0x61, 0x69, 0x6c,
+	0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x15, 0x12, 0x13, 0x2f,
+	0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x2f, 0x64, 0x65, 0x74, 0x61,
+	0x69, 0x6c, 0x42, 0x44, 0x0a, 0x18, 0x61, 0x70, 0x69, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73,
 	0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x50, 0x01,
 	0x5a, 0x26, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2f, 0x61, 0x70, 0x69,
 	0x2f, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x62, 0x6c, 0x6f, 0x67, 0x2f, 0x73, 0x65, 0x72, 0x76,
@@ -454,7 +562,7 @@ func file_api_kratosblog_server_v1_article_proto_rawDescGZIP() []byte {
 	return file_api_kratosblog_server_v1_article_proto_rawDescData
 }
 
-var file_api_kratosblog_server_v1_article_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_api_kratosblog_server_v1_article_proto_msgTypes = make([]protoimpl.MessageInfo, 8)
 var file_api_kratosblog_server_v1_article_proto_goTypes = []interface{}{
 	(*CategoryListRequest)(nil), // 0: api.kratosblog.server.v1.CategoryListRequest
 	(*CategoryListReply)(nil),   // 1: api.kratosblog.server.v1.CategoryListReply
@@ -462,23 +570,28 @@ var file_api_kratosblog_server_v1_article_proto_goTypes = []interface{}{
 	(*TagListReply)(nil),        // 3: api.kratosblog.server.v1.TagListReply
 	(*ListRequest)(nil),         // 4: api.kratosblog.server.v1.ListRequest
 	(*ListReply)(nil),           // 5: api.kratosblog.server.v1.ListReply
-	(*v1.Article)(nil),          // 6: api.kratosblog.data.v1.Article
+	(*DetailRequest)(nil),       // 6: api.kratosblog.server.v1.DetailRequest
+	(*DetailReply)(nil),         // 7: api.kratosblog.server.v1.DetailReply
+	(*v1.Article)(nil),          // 8: api.kratosblog.data.v1.Article
 }
 var file_api_kratosblog_server_v1_article_proto_depIdxs = []int32{
-	6, // 0: api.kratosblog.server.v1.CategoryListReply.list:type_name -> api.kratosblog.data.v1.Article
-	6, // 1: api.kratosblog.server.v1.TagListReply.list:type_name -> api.kratosblog.data.v1.Article
-	6, // 2: api.kratosblog.server.v1.ListReply.list:type_name -> api.kratosblog.data.v1.Article
-	0, // 3: api.kratosblog.server.v1.Article.CategoryList:input_type -> api.kratosblog.server.v1.CategoryListRequest
-	2, // 4: api.kratosblog.server.v1.Article.TagList:input_type -> api.kratosblog.server.v1.TagListRequest
-	4, // 5: api.kratosblog.server.v1.Article.List:input_type -> api.kratosblog.server.v1.ListRequest
-	1, // 6: api.kratosblog.server.v1.Article.CategoryList:output_type -> api.kratosblog.server.v1.CategoryListReply
-	3, // 7: api.kratosblog.server.v1.Article.TagList:output_type -> api.kratosblog.server.v1.TagListReply
-	5, // 8: api.kratosblog.server.v1.Article.List:output_type -> api.kratosblog.server.v1.ListReply
-	6, // [6:9] is the sub-list for method output_type
-	3, // [3:6] is the sub-list for method input_type
-	3, // [3:3] is the sub-list for extension type_name
-	3, // [3:3] is the sub-list for extension extendee
-	0, // [0:3] is the sub-list for field type_name
+	8, // 0: api.kratosblog.server.v1.CategoryListReply.list:type_name -> api.kratosblog.data.v1.Article
+	8, // 1: api.kratosblog.server.v1.TagListReply.list:type_name -> api.kratosblog.data.v1.Article
+	8, // 2: api.kratosblog.server.v1.ListReply.list:type_name -> api.kratosblog.data.v1.Article
+	8, // 3: api.kratosblog.server.v1.DetailReply.detail:type_name -> api.kratosblog.data.v1.Article
+	0, // 4: api.kratosblog.server.v1.Article.CategoryList:input_type -> api.kratosblog.server.v1.CategoryListRequest
+	2, // 5: api.kratosblog.server.v1.Article.TagList:input_type -> api.kratosblog.server.v1.TagListRequest
+	4, // 6: api.kratosblog.server.v1.Article.List:input_type -> api.kratosblog.server.v1.ListRequest
+	6, // 7: api.kratosblog.server.v1.Article.Detail:input_type -> api.kratosblog.server.v1.DetailRequest
+	1, // 8: api.kratosblog.server.v1.Article.CategoryList:output_type -> api.kratosblog.server.v1.CategoryListReply
+	3, // 9: api.kratosblog.server.v1.Article.TagList:output_type -> api.kratosblog.server.v1.TagListReply
+	5, // 10: api.kratosblog.server.v1.Article.List:output_type -> api.kratosblog.server.v1.ListReply
+	7, // 11: api.kratosblog.server.v1.Article.Detail:output_type -> api.kratosblog.server.v1.DetailReply
+	8, // [8:12] is the sub-list for method output_type
+	4, // [4:8] is the sub-list for method input_type
+	4, // [4:4] is the sub-list for extension type_name
+	4, // [4:4] is the sub-list for extension extendee
+	0, // [0:4] is the sub-list for field type_name
 }
 
 func init() { file_api_kratosblog_server_v1_article_proto_init() }
@@ -559,6 +672,30 @@ func file_api_kratosblog_server_v1_article_proto_init() {
 				return nil
 			}
 		}
+		file_api_kratosblog_server_v1_article_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*DetailRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_kratosblog_server_v1_article_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*DetailReply); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -566,7 +703,7 @@ func file_api_kratosblog_server_v1_article_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_kratosblog_server_v1_article_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   8,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
