# openapi.yaml
@@ -65,6 +65,29 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /v1/articles/detail:
+        get:
+            tags:
+                - Article
+            operationId: Article_Detail
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DetailReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /v1/articles/list:
         get:
             tags:
@@ -152,8 +175,7 @@ components:
             type: object
             properties:
                 id:
-                    type: integer
-                    format: int64
+                    type: string
                 title:
                     type: string
                 cover:
@@ -173,8 +195,7 @@ components:
             type: object
             properties:
                 id:
-                    type: integer
-                    format: int64
+                    type: string
                 name:
                     type: string
                 cover:
@@ -195,6 +216,11 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/Article'
+        DetailReply:
+            type: object
+            properties:
+                detail:
+                    $ref: '#/components/schemas/Article'
         GoogleProtobufAny:
             type: object
             properties:
@@ -253,8 +279,7 @@ components:
             type: object
             properties:
                 id:
-                    type: integer
-                    format: int64
+                    type: string
                 name:
                     type: string
                 color:
